manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
spec:
  type: NodePort #Use ClusterIP if you use Ingress
  selector:
    app: hello-world 
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
